--- a/react_search_agent/pyproject.toml
+++ b/react_search_agent/pyproject.toml
@@ -6,11 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 
 dependencies = [
-    "langchain~=1.2.1",
-    "langchain-core~=1.2.6",
-    "langchain-groq>=1.1.1",
-    "langchain-tavily>=0.2.16",
-    "python-dotenv>=1.2.1",
-    "black>=24.10.0",
-    "isort>=7.0.0",
+    "langchain~=0.3.0",
+    "langchain-core~=0.3.0",
+    "langchain-groq>=0.2.0",
+    "langchain-community>=0.3.0",
+    "tavily-python>=0.5.0",
+    "python-dotenv>=1.0.0",
 ]
