--- a/react_search_agent/pyproject.toml
+++ b/react_search_agent/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "langchain-community>=0.3.0",
     "tavily-python>=0.5.0",
     "python-dotenv>=1.0.0",
+    "langchainhub>=0.1.21",
 ]
